Fix: Text hierarchy and letter spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -33,6 +34,7 @@ body {
   background-color: #fffbfa;
   font-family: Raleway, Arial, sans-serif;
   line-height: 1.6;
+  letter-spacing: 0.5;
 }
 
 ::-webkit-scrollbar-track {
@@ -178,7 +180,7 @@ footer p.copyright {
   font-weight: 600;
   text-transform: uppercase;
   text-decoration: none;
-  letter-spacing: 1px;
+  letter-spacing: 1.6;
   display: inline-block !important;
   border-radius: 500px;
 }
@@ -279,6 +281,23 @@ footer p.copyright {
   position: relative;
   border-radius: 1.2rem;
 }
+.features .features__tile h3 {
+  margin-bottom: 1rem;
+  position: relative;
+  padding-bottom: 0.5rem;
+}
+.features .features__tile h3:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: linear-gradient(to right, #777, transparent);
+  height: 1px;
+}
+.features .features__tile h4 {
+  font-weight: normal;
+}
 @media (max-width: 900px) {
   .features .features__tile:not(:first-child) {
     margin-top: 2rem;
@@ -315,7 +334,7 @@ footer p.copyright {
   color: white;
 }
 .word-from-founder .header {
-  padding: 1rem;
+  padding: 1.2rem;
   display: flex;
   align-items: center;
   border-radius: 100px;
@@ -350,9 +369,15 @@ footer p.copyright {
   z-index: 1;
   padding: 2rem;
   padding-top: 6rem;
-  border-radius: 0 0 3rem 3rem;
+  padding-bottom: 3rem;
+  border-radius: 0 0 4rem 4rem;
   margin: auto;
-  margin-top: -4.5rem;
+  margin-top: -4.9rem;
+}
+.word-from-founder .content .hello {
+  font-family: "Indie Flower";
+  font-size: 2rem;
+  letter-spacing: 1.6;
 }
 
 .how-it-works {
