--- a/assets/scss/abstract/base.scss
+++ b/assets/scss/abstract/base.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -30,6 +32,7 @@ body {
   background-color: #fffbfa;
   font-family: Raleway, Arial, sans-serif;
   line-height: 1.6;
+  letter-spacing: 0.5;
 }
 
 // Scroll bar Styles
