--- a/assets/scss/components/buttons.scss
+++ b/assets/scss/components/buttons.scss
@@ -5,7 +5,7 @@
     font-weight: 600;
     text-transform: uppercase;
     text-decoration: none;
-    letter-spacing: 1px;
+    letter-spacing: 1.6;
     display: inline-block !important;
     border-radius: 500px;
   }
