--- a/assets/scss/layouts/home.scss
+++ b/assets/scss/layouts/home.scss
@@ -64,6 +64,24 @@
     background: #efefef;
     position: relative;
     border-radius: 1.2rem;
+    h3 {
+      margin-bottom: 1rem;
+      position: relative;
+      padding-bottom: 0.5rem;
+      &:after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        background: linear-gradient(to right, #777, transparent);
+        height: 1px;
+      }
+    }
+
+    h4 {
+      font-weight: normal;
+    }
 
     @media (max-width: 900px) {
       // padding-bottom: 2rem;
@@ -110,7 +128,7 @@
   }
 
   .header {
-    padding: 1rem;
+    padding: 1.2rem;
     display: flex;
     align-items: center;
     border-radius: 100px;
@@ -149,11 +167,15 @@
     z-index: 1;
     padding: 2rem;
     padding-top: 6rem;
-    border-radius: 0 0 3rem 3rem;
-    // width: 80%;
+    padding-bottom: 3rem;
+    border-radius: 0 0 4rem 4rem;
     margin: auto;
-    margin-top: -4.5rem;
-    // box-shadow: 0px 0.4rem 1.5em rgba($color: #000000, $alpha: 0.2)
+    margin-top: -4.9rem;
+    .hello {
+      font-family: 'Indie Flower';
+      font-size: 2rem;
+      letter-spacing: 1.6;
+    }
   }
 }
 
